syntax = "proto3";

package example;

message SerializableObject {
    string Login = 1;
    int32 CountInventory = 2;
    float Coin = 3;
    map<string, int32> Inventory = 4;
    repeated string PartyLogins = 5;
}
